Refactored build scripts. Use actions/setup-java@v4 and actions/checkout@v4